--- a/config/database.yml
+++ b/config/database.yml
@@ -23,17 +23,17 @@ development:
 test:
   adapter: mysql2
   encoding: utf8
-  database: sample_app_test
+  database: sample_app_development
   pool: 5
   username: root
-  password:
-  host: localhost
+  password: gs123456
+  host: 192.168.2.201
 
 production:
   adapter: mysql2
   encoding: utf8
-  database: sample_app_production
+  database: sample_app_development
   pool: 5
   username: root
-  password:
-  host: localhost
+  password: gs123456
+  host: 192.168.2.201
