--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ development:
 test:
   adapter: mysql2
   encoding: utf8
-  database: sample_app_development
+  database: sample_app_test
   pool: 5
   username: root
   password: gs123456
