--- a/config/database.yml
+++ b/config/database.yml
@@ -32,7 +32,7 @@ test:
 production:
   adapter: mysql2
   encoding: utf8
-  database: sample_app_development
+  database: sample_app_production
   pool: 5
   username: root
   password: gs123456
